{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 8,
  "lineage": "10eb2550-2a99-e6cb-dbc9-7ada79fec2f5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f5fcdfbd140e4ab7",
            "arn": "arn:aws:ec2:us-east-2:297936607925:instance/i-0fdc7602f7110393f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fdc7602f7110393f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0dfd128b2adb5e6e5"
              }
            ],
            "primary_network_interface_id": "eni-0dfd128b2adb5e6e5",
            "private_dns": "ip-10-0-1-147.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.147",
            "public_ip": "18.222.99.172",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f7284422d168f395",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0d1b8d4ad7c036243"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f3ecfb527a3745b5",
            "tags": {
              "Name": "MyWebServer"
            },
            "tags_all": {
              "Name": "MyWebServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d1b8d4ad7c036243"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "297936607925",
            "id": "i-0fdc7602f7110393f",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:297936607925:internet-gateway/igw-03e502065451f4a26",
            "id": "igw-03e502065451f4a26",
            "owner_id": "297936607925",
            "region": "us-east-2",
            "vpc_id": "vpc-02dd65a71151724d3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:297936607925:route-table/rtb-01b054037ba760a43",
            "id": "rtb-01b054037ba760a43",
            "owner_id": "297936607925",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03e502065451f4a26",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02dd65a71151724d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "297936607925",
            "id": "rtb-01b054037ba760a43",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09308afce4a3aa002",
            "region": "us-east-2",
            "route_table_id": "rtb-01b054037ba760a43",
            "subnet_id": "subnet-0f3ecfb527a3745b5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:297936607925:security-group/sg-0d1b8d4ad7c036243",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1b8d4ad7c036243",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "297936607925",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02dd65a71151724d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "297936607925",
            "id": "sg-0d1b8d4ad7c036243",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:297936607925:subnet/subnet-0f3ecfb527a3745b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3ecfb527a3745b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "297936607925",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "vpc_id": "vpc-02dd65a71151724d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "297936607925",
            "id": "subnet-0f3ecfb527a3745b5",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:297936607925:vpc/vpc-02dd65a71151724d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e94d68764371b774",
            "default_route_table_id": "rtb-0ff5ffba3a0852837",
            "default_security_group_id": "sg-0b44b3e72c82aabf0",
            "dhcp_options_id": "dopt-00665affda8a82e22",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02dd65a71151724d3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ff5ffba3a0852837",
            "owner_id": "297936607925",
            "region": "us-east-2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "297936607925",
            "id": "vpc-02dd65a71151724d3",
            "region": "us-east-2"
          }
        }
      ]
    }
  ]
}